LIVERY-582 Added overflow hidden on buffer graph to prevent interactive layer flickering

--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,7 @@ livery-player {
 livery-buffer-graph {
   width: 100%;
   background-color: rgba(255, 255, 255, 0.137);
+  overflow: hidden;
 }
 
 .graph-segment {
